--- a/src/DiscordExplorer/DiscordExplorer.csproj
+++ b/src/DiscordExplorer/DiscordExplorer.csproj
@@ -7,11 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\DiscordExplorer.CacheParser\DiscordExplorer.CacheParser.csproj" />
+    <ProjectReference Include="..\DiscordExplorer.Common\DiscordExplorer.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
