--- a/src/DiscordExplorer.Common/DiscordExplorer.Common.csproj
+++ b/src/DiscordExplorer.Common/DiscordExplorer.Common.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="NLog" Version="4.7.3" />
+    <PackageReference Include="Sentry" Version="2.1.5" />
   </ItemGroup>
 
   <ItemGroup>
