--- a/src/DiscordExplorer.CLI/DiscordExplorer.CLI.csproj
+++ b/src/DiscordExplorer.CLI/DiscordExplorer.CLI.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\DiscordExplorer.CacheParser\DiscordExplorer.CacheParser.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.8.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
