WIP: Parsing IndexHeader.
Added initial code to parse the header file, using the struct definitions from disk_cache.h from the chromium project.

--- a/src/DiscordExplorer.CacheParser/DiscordExplorer.CacheParser.csproj
+++ b/src/DiscordExplorer.CacheParser/DiscordExplorer.CacheParser.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <PackageReference Include="System.IO.Packaging" Version="4.3.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
