Correct font weighting, size and family now used

--- a/src/DiscordExplorer/DiscordExplorer.csproj
+++ b/src/DiscordExplorer/DiscordExplorer.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Fonts\Whitney\whitneymedium.otf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Fonts\Whitney\whitneymedium.otf" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Humanizer" Version="2.8.26" />
     <PackageReference Include="NLog" Version="4.7.3" />
     <PackageReference Include="Sentry" Version="2.1.5" />
