--- a/src/DiscordExplorer.Common/DiscordExplorer.Common.csproj
+++ b/src/DiscordExplorer.Common/DiscordExplorer.Common.csproj
@@ -5,9 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="15.0.5" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="NLog" Version="4.7.3" />
-    <PackageReference Include="Sentry" Version="2.1.5" />
+    <PackageReference Include="Sentry" Version="2.1.6" />
   </ItemGroup>
 
   <ItemGroup>
