Added LevelDBParser.go as standalone exe to list DB key-value pairs

--- a/src/DiscordExplorer.Common/DiscordExplorer.Common.csproj
+++ b/src/DiscordExplorer.Common/DiscordExplorer.Common.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -14,6 +14,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DiscordExplorer.CacheParser\DiscordExplorer.CacheParser.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="DiscordExplorer.LevelDBParser.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
